; ModuleID = '/home/carl/AnghaBench/zfs/module/icp/os/extr_modhash.c_mod_hash_bystr.c'
source_filename = "/home/carl/AnghaBench/zfs/module/icp/os/extr_modhash.c_mod_hash_bystr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mod_hash_bystr(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 0, i32* %5, align 4
  %9 = load i64, i64* %4, align 8
  %10 = inttoptr i64 %9 to i8*
  store i8* %10, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = call i32 @ASSERT(i8* %11)
  %13 = load i8*, i8** %8, align 8
  store i8* %13, i8** %7, align 8
  br label %14

14:                                               ; preds = %38, %2
  %15 = load i8*, i8** %7, align 8
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %41

19:                                               ; preds = %14
  %20 = load i32, i32* %5, align 4
  %21 = shl i32 %20, 4
  %22 = load i8*, i8** %7, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = add nsw i32 %21, %24
  store i32 %25, i32* %5, align 4
  %26 = load i32, i32* %5, align 4
  %27 = and i32 %26, -268435456
  store i32 %27, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %37

29:                                               ; preds = %19
  %30 = load i32, i32* %6, align 4
  %31 = ashr i32 %30, 24
  %32 = load i32, i32* %5, align 4
  %33 = xor i32 %32, %31
  store i32 %33, i32* %5, align 4
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %5, align 4
  %36 = xor i32 %35, %34
  store i32 %36, i32* %5, align 4
  br label %37

37:                                               ; preds = %29, %19
  br label %38

38:                                               ; preds = %37
  %39 = load i8*, i8** %7, align 8
  %40 = getelementptr inbounds i8, i8* %39, i32 1
  store i8* %40, i8** %7, align 8
  br label %14

41:                                               ; preds = %14
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i32 @ASSERT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
